--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Macross.Json.Extensions" Version="2.0.0-beta2" />
+      <PackageReference Include="Macross.Json.Extensions" Version="2.0.0" />
     </ItemGroup>
 
 </Project>
