--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -1,11 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <RepositoryUrl>https://github.com/Hona/Up.NET</RepositoryUrl>
+        <Authors>Luke Parker</Authors>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <PackageId>HUp.NET</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Macross.Json.Extensions" Version="2.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="..\LICENSE">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
     </ItemGroup>
 
 </Project>
