--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -7,6 +7,7 @@
         <Authors>Luke Parker</Authors>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageId>HUp.NET</PackageId>
+        <Version>1.1.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
