✨ Add pagination methods

--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <RepositoryUrl>https://github.com/Hona/Up.NET</RepositoryUrl>
         <Authors>Luke Parker</Authors>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageId>HUp.NET</PackageId>
         <Version>1.1.1</Version>
+        <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,7 +18,6 @@
     <ItemGroup>
       <None Include="..\LICENSE">
         <Pack>True</Pack>
-        <PackagePath></PackagePath>
       </None>
     </ItemGroup>
 
