--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -7,7 +7,7 @@
         <Authors>Luke Parker</Authors>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageId>HUp.NET</PackageId>
-        <Version>1.1.1</Version>
+        <Version>1.2.0</Version>
         <ImplicitUsings>true</ImplicitUsings>
     </PropertyGroup>
 
@@ -18,6 +18,8 @@
     <ItemGroup>
         <None Include="..\LICENSE">
             <Pack>True</Pack>
+            <!--suppress CheckTagEmptyBody -->
+            <PackagePath></PackagePath>
         </None>
     </ItemGroup>
 
