chore: enable TreatWarningsAsErrors for stricter build

--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -9,6 +9,7 @@
         <PackageId>HUp.NET</PackageId>
         <Version>1.3.0</Version>
         <ImplicitUsings>true</ImplicitUsings>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
