--- a/Up.NET.Sandbox/Up.NET.Sandbox.csproj
+++ b/Up.NET.Sandbox/Up.NET.Sandbox.csproj
@@ -4,7 +4,13 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>true</ImplicitUsings>
+        <UserSecretsId>up-net-sandbox</UserSecretsId>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
+    </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Up.NET\Up.NET.csproj"/>
