--- a/Up.NET/Up.NET.csproj
+++ b/Up.NET/Up.NET.csproj
@@ -3,11 +3,12 @@
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/Hona/Up.NET</RepositoryUrl>
         <Authors>Luke Parker</Authors>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageId>HUp.NET</PackageId>
-        <Version>1.3.0</Version>
+        <Version>1.4.0</Version>
         <ImplicitUsings>true</ImplicitUsings>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
@@ -20,6 +21,10 @@
         <None Include="..\LICENSE">
             <Pack>True</Pack>
             <!--suppress CheckTagEmptyBody -->
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="..\README.md">
+            <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
     </ItemGroup>
