chore: add PublishAot to sandbox for AOT testing

--- a/Up.NET.Sandbox/Up.NET.Sandbox.csproj
+++ b/Up.NET.Sandbox/Up.NET.Sandbox.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>true</ImplicitUsings>
         <UserSecretsId>up-net-sandbox</UserSecretsId>
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
     <ItemGroup>
